packages/components-css/language-navigation-css/src/_mixin.scss
/**
 * @license EUPL-1.2
 * Copyright (c) 2026 Community for NL Design System
 */

@use "@utrecht/listbox-css/src/mixin" as utrecht-listbox-mixin;

@mixin rhc-language-navigation__trigger {
  --utrecht-button-font-weight: var(--rhc-font-weight-regular);
  --utrecht-button-gap: var(--rhc-link-column-gap);
}

@mixin rhc-language-navigation__list {
  @include utrecht-listbox-mixin.utrecht-listbox;
  @include utrecht-listbox-mixin.reset-ul;
}

@mixin rhc-language-navigation__list__item {
  @include utrecht-listbox-mixin.utrecht-listbox__option;

  padding-block-end: 0;
  padding-block-start: 0;
  padding-inline-end: 0;
  padding-inline-start: 0;
}

@mixin rhc-language-navigation__list__item--html-li {
  @include utrecht-listbox-mixin.reset-li;

  &:hover {
    @include utrecht-listbox-mixin.utrecht-listbox__option--hover;
  }

  &:focus {
    @include utrecht-listbox-mixin.utrecht-listbox__option--focus;
  }
}

// Currently the utrecht mixin does not apply pseudo classes properly so we set the variables ourselves
// once the following issue is resolved we can use the mixin again: https://github.com/nl-design-system/utrecht/issues/3031
@mixin rhc-language-navigation__list__item--selected {
  --_utrecht-listbox-option-state-background-color: var(--utrecht-listbox-option-selected-background-color);
  --_utrecht-listbox-option-state-color: var(--utrecht-listbox-option-selected-color);
  --_nl-link-state-color: var(--utrecht-listbox-option-selected-color);
}

@mixin rhc-language-navigation__link--focus-visible {
  @include utrecht-listbox-mixin.utrecht-listbox__option--focus-visible;
}

@mixin rhc-language-navigation__link {
  // remove default link styles
  --nl-link-text-decoration-line: none;
  --nl-link-hover-text-decoration-line: none;

  // set link colors based on listbox option colors
  --nl-link-color: var(--utrecht-listbox-option-color, var(--rhc-color-zwart));
  --nl-link-active-color: var(--utrecht-listbox-option-color, var(--rhc-color-zwart));
  --nl-link-hover-color: var(--utrecht-listbox-option-hover-color, var(--rhc-color-zwart));

  flex-grow: 1;

  // make the link fill the list item
  line-height: calc(
    var(--utrecht-listbox-option-min-block-size, var(--rhc-space-3xl)) - var(
        --utrecht-listbox-option-padding-block-start,
        var(--rhc-space-md)
      ) - var(--utrecht-listbox-option-padding-block-end, var(--rhc-space-md))
  );
  padding-block-end: var(--utrecht-listbox-option-padding-block-end, var(--rhc-space-md));
  padding-block-start: var(--utrecht-listbox-option-padding-block-start, var(--rhc-space-md));
  padding-inline-end: var(--utrecht-listbox-option-padding-inline-end, var(--rhc-space-xl));
  padding-inline-start: var(--utrecht-listbox-option-padding-inline-start, var(--rhc-space-xl));
}

@mixin rhc-language-navigation__link--button {
  // reset default button styles & match link colors
  appearance: none;
  background: transparent;
  border: 0;
  color: inherit;
  cursor: pointer;
  font: inherit;
  inline-size: 100%;
  text-align: start;
}

